# vibebench-arena

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.vibebench/: config.yaml
docs/: README.md  adoption.md  architecture.md  artifact-gallery.md  case-study.md  codex-task-template.md  commercial-potential.md  comparison.md  demo-script.md  demo.md  evaluate.md  faq.md  github-action.md  github-actions.md  index.html  investor-brief.md  marketplace-readiness.md  pages.md  positioning.md  pr-comment-e2e-test.md  pr-comments.md  product-strategy.md  proof-matrix.md  public-proof-packet.md  quickstart.md  release-checklist-v0.4.0.md  review-hub.html  reviewer-guide.md  risk-rules.md  roadmap-public.md  security-questionnaire.html  security-questionnaire.md  showcase.html  showcase.md  technical-due-diligence.md  trust-center.html  trust-center.md  use-cases.md
examples/: README.md
examples/reference-project/: README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
examples/reference-project/.github/workflows/: ci.yml
examples/reference-project/.vibebench/: config.yaml
examples/reference-project/docs/: github-actions.md  quickstart.md
examples/reference-project/reference_app/: __init__.py  calculator.py
examples/reference-project/tests/: test_calculator.py
examples/reference-project/tools/: check_syntax.py
scripts/: build_pages_site.py  build_public_demo.py  build_public_proof_packet.py  run_github_action.py
tests/: cli_help_utils.py  test_annotate.py  test_artifacts.py  (+48 more)
(+117 files in other folders)
