[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibebench-arena"
version = "0.1.0"
description = "Codex-first quality gate for vibe coding projects."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "VibeBench Arena Contributors" },
]
keywords = ["codex", "vibe-coding", "quality-gate", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.1,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
vibebench = "vibebench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vibebench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"vibebench/report.py" = ["E501"]
